fix: use vendor naming for frc solution
